# Unilyric

./: .gitignore  AMLL_WebSocket_Connector_技术说明.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  Unilyric-面向开发者.html  Unilyric-面向用户.html  biome.json  package.json  pnpm-lock.yaml  roundtrip_output.ttml
.github/workflows/: ci.yml  release.yml
UniLyricApp/: package.json  pnpm-lock.yaml  tsconfig.json
UniLyricApp/src/: App.tsx  atoms.ts  main.tsx  types.ts
UniLyricApp/src-tauri/: Cargo.toml  tauri.conf.json
UniLyricApp/src-tauri/src/: lib.rs  main.rs
Unilyric/: Cargo.toml  LICENSE
Unilyric/.github/workflows/: release.yml
Unilyric/src/: app.rs  app_actions.rs  app_definition.rs  app_fetch_core.rs  app_handlers.rs  app_settings.rs  app_ui.rs  app_update.rs  io.rs  main.rs  types.rs
Unilyric/src/amll_connector/: mod.rs  protocol.rs  protocol_strings.rs  translation.rs  types.rs  websocket_client.rs  websocket_server.rs  worker.rs
Unilyric/src/amll_connector/protocol_v2/: common.rs  mod.rs  v2.rs
Unilyric/src/ui/: constants.rs  mod.rs  panels.rs  settings.rs  sidebar.rs  status.rs  toolbar.rs  windows.rs
Unilyric/src/ui/views/: batch_converter.rs  downloader.rs  mod.rs
Unilyric/test_data/: main.qrc  roma.qrc
libs/: marisa.lib  opencc.lib
lyrics_helper_core/: Cargo.toml
lyrics_helper_core/assets/: default_stripper_config.toml
lyrics_helper_core/src/: error.rs  lib.rs
lyrics_helper_core/src/converter/: config.rs  io.rs  metadata.rs  mod.rs  types.rs
lyrics_helper_core/src/model/: generic.rs  mod.rs  track.rs
lyrics_helper_lite/: Cargo.toml  README.md
lyrics_helper_lite/src/: client.rs  error.rs  lib.rs  wasm_bridge.rs
lyrics_helper_lite/src/parser/: lrc_parser.rs  mod.rs  qrc_parser.rs  utils.rs  yrc_parser.rs
lyrics_helper_lite/src/providers/: mod.rs
lyrics_helper_lite/src/providers/netease/: crypto.rs  mod.rs  models.rs
lyrics_helper_lite/src/providers/qq/: decoder.rs  mod.rs  models.rs
lyrics_helper_lite/src/search/: matcher.rs  mod.rs
lyrics_helper_lite/src/utils/: chinese.rs
lyrics_helper_lite/tests/: netease_provider_integration_test.rs  qq_provider_integration_test.rs
lyrics_helper_lite/tests/test_data/: netease_lyrics_response.json  netease_search_response.json  qq_lyrics_response.xml  qq_search_response.json
lyrics_helper_rs/: Cargo.toml  build.rs
lyrics_helper_rs/.cargo/: config.toml
lyrics_helper_rs/benches/: decryption_benchmark.rs  ttml_parser_benchmark.rs
lyrics_helper_rs/examples/: demo.rs  netease_playlist_downloader.rs
lyrics_helper_rs/src/: config.rs  error.rs  lib.rs  wasm.rs
lyrics_helper_rs/src/converter/: mod.rs  types.rs  utils.rs
lyrics_helper_rs/src/converter/generators/: apple_music_json_generator.rs  ass_generator.rs  enhanced_lrc_generator.rs  krc_generator.rs  lqe_generator.rs  lrc_generator.rs  lyricify_lines_generator.rs  lys_generator.rs  mod.rs  qrc_generator.rs  spl_generator.rs  yrc_generator.rs
lyrics_helper_rs/src/converter/parsers/: apple_music_json_parser.rs  ass_parser.rs  enhanced_lrc_parser.rs  krc_parser.rs  lqe_parser.rs  lrc_parser.rs  lyricify_lines_parser.rs  lys_parser.rs  mod.rs  qrc_parser.rs  spl_parser.rs  yrc_parser.rs
lyrics_helper_rs/src/converter/processors/: agent_recognizer.rs  batch_processor.rs  chinese_conversion_processor.rs  metadata_stripper.rs  mod.rs  syllable_smoothing.rs
lyrics_helper_rs/src/http/: mod.rs  reqwest_client.rs  wasm_client.rs  wreq_client.rs
lyrics_helper_rs/src/model/: auth.rs  match_type.rs  mod.rs
lyrics_helper_rs/src/providers/: login.rs  mod.rs
lyrics_helper_rs/src/providers/amll_ttml_database/: mod.rs  types.rs
lyrics_helper_rs/src/providers/kugou/: decrypter.rs  mod.rs  models.rs  signature.rs
lyrics_helper_rs/src/providers/netease/: crypto.rs  mod.rs  models.rs
lyrics_helper_rs/src/providers/qq/: device.rs  mod.rs  models.rs  qimei.rs  qrc_codec.rs  sign.rs
lyrics_helper_rs/src/search/: matcher.rs  mod.rs
lyrics_helper_rs/tests/: qq_login_integration_test.rs
lyrics_helper_rs/tests/test_data/: kugou_lyrics.b64  kugou_lyrics.krc
src/: app.rs  app_actions.rs  app_definition.rs  app_events.rs  app_fetch_core.rs  app_handlers.rs  app_settings.rs  app_ui.rs  app_update.rs  ass_generator.rs  ass_parser.rs  chinese_conversion_processor.rs  error.rs  io.rs  json_parser.rs  krc_generator.rs  krc_parser.rs  logger.rs  lqe_generator.rs  lqe_parser.rs  lqe_to_ttml_data.rs  lrc_generator.rs  lrc_parser.rs  lyricify_lines_generator.rs  lyricify_lines_parser.rs  lyricify_lines_to_ttml_data.rs  lyrics_merger.rs  lys_generator.rs  lys_parser.rs  lys_to_ttml_data.rs  main.rs  metadata_processor.rs  qrc_generator.rs  qrc_parser.rs  qrc_to_ttml_data.rs  spl_generator.rs  spl_parser.rs  spl_to_ttml_data.rs  ttml_generator.rs  ttml_parser.rs  (+6 more)
src/amll_connector/: amll_connector_manager.rs  audio_capture.rs  mod.rs  protocol.rs  protocol_strings.rs  smtc_handler.rs  translation.rs  types.rs  volume_control.rs  websocket_client.rs  (+1 more)
ttml_processor/: .gitignore  Cargo.toml  README.md
ttml_processor/benches/: ttml_parser_benchmark.rs
ttml_processor/examples/: roundtrip.rs
ttml_processor/src/: lib.rs  utils.rs
ttml_processor/src/generator/: body.rs  head.rs  mod.rs  splitting.rs  track.rs  utils.rs
ttml_processor/src/parser/: body.rs  constants.rs  handlers.rs  metadata.rs  mod.rs  state.rs  utils.rs
ttml_processor/tests/: ttml_generation_integration_tests.rs  ttml_parser_integration_tests.rs
ttml_processor/tests/snapshots/: ttml_generation_integration_tests__auto_word_splitting_snapshot.snap  ttml_generation_integration_tests__generate_line_timed_snapshot.snap  ttml_generation_integration_tests__generate_timed_romanization_snapshot.snap  ttml_generation_integration_tests__generate_timed_translation_snapshot.snap  ttml_generation_integration_tests__generate_word_timed_with_agents_snapshot.snap  ttml_parser_integration_tests__complex_round_trip.snap  ttml_parser_integration_tests__complex_round_trip.snap.new  ttml_parser_integration_tests__round_trip.snap
ttml_processor/tests/test_data/: complex_round_trip.ttml
(+26 files in other folders)
