[package]
name = "Unilyric"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.3.0"
easer = "0.3.0"
eframe = "0.31.1"
egui = "0.31.1"
egui-toast = "0.17.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
rfd = "0.15.3"
webbrowser = "1.0.4"
ferrous-opencc = "*"

futures-util = "0.3.31"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.27.0"
url = "2.5.4"

reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
rand = "0.9"
urlencoding = "2.1"
log = { version = "0.4", features = ["serde"] }
fern = "0.7"
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

directories = "6"
once_cell = "1.19"
rubato = "0.16.2"
thiserror = "2.0.12"

windows = { version = "0.61", features = [
    "Media_Control",
    "Storage_Streams",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
] }
windows-future = { version = "0.2" }
strum_macros = "0.27.2"
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
lyrics_helper_rs = { git = "https://github.com/apoint123/lyrics_helper_rs.git" }
smtc-suite = { git = "https://github.com/apoint123/smtc-suite.git" }
crossbeam-channel = "0.5.15"
binrw = "0.15.0"
bytes = "1.10.1"
