[package]
name = "lyrics_helper_core"
version = "0.1.0"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "lyrics_helper_rs 的核心类型。"
homepage = "https://github.com/apoint123/Unilyric"
repository = "https://github.com/apoint123/Unilyric"
license = "MIT"
keywords = ["lyrics", "lrc", "parser", "types", "core"]
categories = ["multimedia::audio", "parsing", "text-processing"]

[dependencies]
base64 = "0.22.1"
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = "1.0.219"
derive_builder = "0.20.2"
bitflags = { version = "2.9.1", features = ["serde"] }
tracing = "0.1.41"
ferrous-opencc = "0.2.3"
