[package]
name = "lyrics_helper_lite"
version = "0.1.0"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "A lightweight library for fetching song lyrics from various online providers. Designed for WASM environment."
license = "MIT"
repository = "https://github.com/apoint123/Unilyric"
homepage = "https://github.com/apoint123/Unilyric"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lyrics_helper_core = { version = "0.2" }
thiserror = "2"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "0.12", default-features = false, features = [] }
hex = "0.4.3"
flate2 = "1.1.2"
rayon = "1.11.0"
quick-xml = "0.38.3"
aes = "0.8.4"
ecb = "0.1.2"
block-padding = "0.3.3"
cipher = "0.4.4"
md-5 = "0.10.6"
strsim = "0.11.1"
ferrous-opencc = "0.2.3"
dashmap = "6.1.0"
regex = "1.11.2"
futures = "0.3.31"

[features]
default = ["console_error_panic_hook"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

items_after_statements = "allow"
missing_errors_doc = "allow"
future_not_send = "allow"
ignore_without_reason = "allow"
missing_panics_doc = "allow"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--strip-debug"]
