[package]
name = "lyrics_helper_rs"
version = "0.2.1"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "一个功能强大且可扩展的 Rust 歌词处理工具库。"
readme = "README.md"
homepage = "https://github.com/apoint123/lyrics-helper-rs"
repository = "https://github.com/apoint123/lyrics-helper-rs"
license = "MIT"
keywords = ["lyrics", "lrc", "parser", "converter", "async"]
categories = [
    "multimedia::audio",
    "parsing",
    "api-bindings",
    "command-line-utilities",
    "text-processing",
]

[lib]
name = "lyrics_helper_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.8.4"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
block-padding = "0.3.3"
cbc = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
cipher = "0.4.4"
dashmap = "6.1.0"
dirs = { version = "6.0.0", optional = true }
ecb = "0.1.2"
fancy-regex = "0.16"
ferrous-opencc = "0.2"
flate2 = "1.1.2"
futures = "0.3.31"
hex = "0.4.3"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
md-5 = "0.10.6"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pinyin = "0.10.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
rand = { version = "0.8" }
rayon = { version = "1.11", optional = true }
regex = "1.11"
wreq-util = "3.0.0-rc.9"
reqwest = { version = "0.13", features = ["json", "cookies"], optional = true }
wreq = { version = "6.0.0-rc.26", features = ["cookies", "query", "form"] }
rsa = { version = "0.9.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11.1"
thiserror = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
fst = "0.4"
lyrics_helper_core = "0.2.0"
ttml_processor = "0.2"
getrandom = { version = "0.3", features = [] }
serde_urlencoded = "0.7.1"
cookie_store = { version = "0.22", features = ["preserve_order"] }
parking_lot = "0.12.4"
const_format = "0.2"
sha1 = "0.10.6"
url = { version = "2.5", features = ["serde"] }
tokio-util = "0.7.16"
futures-core = "0.3.31"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
toml = "0.9.6"

[dev-dependencies]
tracing = "0.1.41"
reqwest = { version = "0.12", features = ["json", "cookies"] }
criterion = "0.7.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["dirs", "rayon"]

[build-dependencies]
fst = "0.4"
rand = "0.9"

[[bench]]
name = "ttml_parser_benchmark"
harness = false
required-features = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

items_after_statements = "allow"
missing_errors_doc = "allow"
future_not_send = "allow"
ignore_without_reason = "allow"
missing_panics_doc = "allow"
