[package]
name = "ttml_processor"
version = "0.1.1"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "A Rust library for parsing and generating TTML lyrics files, specifically designed for Apple Music and AMLL formats."
readme = "README.md"
homepage = "https://github.com/apoint123/Unilyric"
repository = "https://github.com/apoint123/Unilyric"
license = "MIT"
keywords = ["ttml", "lyrics", "parser", "generator", "xml"]
categories = ["multimedia::audio", "parsing", "text-processing"]

[dependencies]
quick-xml = { version = "0.38.2", features = ["serialize"] }
hyphenation = { version = "0.8.4", features = ["embed_en-us"] }
unicode-segmentation = "1.12.0"
tracing = "0.1.41"
lyrics_helper_core = "0.1.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
criterion = "0.7.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
map_unwrap_or = "warn"

[[bench]]
name = "ttml_parser_benchmark"
harness = false
