[package]
name = "unilyricapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
name = "unilyricapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lyrics_helper_rs = { path = "../../lyrics_helper_rs" }
lyrics_helper_core = { path = "../../lyrics_helper_core" }
tokio = { version = "1.48.0", features = ["full"] }
